--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-empty-object-type": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "no-var": "off"
+    "no-var": "off",
+    "@typescript-eslint/no-non-null-asserted-optional-chain": "off"
   }
 }
