--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@react-email/components": "^0.0.32",
     "@tanstack/react-query": "^5.59.13",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
@@ -45,6 +46,7 @@
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.10.0",
     "prisma": "^5.21.1",
     "react": "^18",
     "react-dom": "^18",
@@ -60,6 +62,7 @@
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^22.7.6",
+    "@types/nodemailer": "^6.4.17",
     "@types/paystack__inline-js": "^1.0.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
