--- a/package.json
+++ b/package.json
@@ -35,22 +35,26 @@
     "@react-email/components": "^0.0.32",
     "@tanstack/react-query": "^5.59.13",
     "@tanstack/react-table": "^8.20.5",
+    "@wojtekmaj/react-hooks": "^1.22.0",
     "axios": "^1.7.7",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
+    "file-loader": "^6.2.0",
     "framer-motion": "^11.11.9",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.10.0",
+    "pdfjs-dist": "2.10.377",
     "prisma": "^5.21.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-pdf": "^9.2.1",
     "resend": "^4.0.1-alpha.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
